--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>client</title>
   </head>
   <body>
     <div id="app"></div>
+    <script
+      type="text/javascript"
+      src="http://ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js"
+    ></script>
+    <div id="prompt"></div>
+    <script>
+      window.attachEvent && window.attachEvent('onload', function() {
+        console.log('-------')
+        CFInstall.check({ mode: 'overlay', node: 'prompt' });
+      });
+    </script>
     <!-- built files will be auto injected -->
   </body>
 </html>
